# nautilusFlow

./: LICENSE.md  README.md
ensembleGeneration/: README.md  allocation_func.py  calling_func.py  gather_ensemble.py  manager.sh  phasta_sim.py  submit_ensemble_cooley.sh
ensembleGeneration/base_0/: diffuser_pipeline.py  input.config  solver.inp
ensembleGeneration/base_0/24-procs_case/: geombc.dat.1  geombc.dat.10  geombc.dat.11  geombc.dat.12  geombc.dat.13  geombc.dat.14  geombc.dat.15  geombc.dat.16  geombc.dat.17  geombc.dat.18  geombc.dat.19  geombc.dat.2  geombc.dat.20  geombc.dat.21  geombc.dat.22  geombc.dat.23  geombc.dat.24  geombc.dat.3  geombc.dat.4  geombc.dat.5  geombc.dat.6  geombc.dat.7  geombc.dat.8  geombc.dat.9  restart.6000.1  restart.6000.10  restart.6000.11  restart.6000.12  restart.6000.13  restart.6000.14  restart.6000.15  restart.6000.16  restart.6000.17  restart.6000.18  restart.6000.19  (+14 more)
ensembleGeneration/input_data/: RV_500.mat  gen_parameters.py  gen_parameters_500.py  parameters_500.mat
senseiCatalystInSitu/: README.md
senseiCatalystInSitu/IS_scripts_pde_solver/: README.md  itrdrv.f  sensei_interface.f
senseiCatalystInSitu/IS_scripts_run_directory/: README.md  diffuser_pipeline.py  senseiPhasta.xml
senseiCatalystInSitu/IS_sensei_miniadaptor_phasta/: Bridge.cpp  Bridge.cpp_orig  Bridge.h  Bridge.h_orig  CMakeLists.txt  DataAdaptor.cpp  DataAdaptor.cpp_orig  DataAdaptor.h  DataAdaptor.h_orig
sensitivityAnalysis/: README.md  diffuser_sensitivity.ipynb
sensitivityAnalysis/Diffuser_data_0/: data_diffuser.mat  uniform_mat.mat
(+10 files in other folders)
